--- a/templates/base.html
+++ b/templates/base.html
@@ -40,8 +40,14 @@
     <title>Your Skin {% block extra_title %}{% endblock %}</title>
 </head>
 
-<body>
-    <header class="container-fluid fixed-top"></header>
+
+</header>
+</body>
+
+
+
+
+    
 
     {% if messages %}
     <div class="message-container"></div>
