--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -18,13 +18,13 @@
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Clothing
+                England
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
-                <a href="" class="dropdown-item">Jeans</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+                <a href="" class="dropdown-item">Manchester United</a>
+                <a href="" class="dropdown-item">Arsenal</a>
+                <a href="" class="dropdown-item">Manchester City</a>
+                <a href="" class="dropdown-item">Liverpool</a>
             </div>
         </li>
 
@@ -35,12 +35,12 @@
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Homeware
+                Portugal
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
+                <a href="" class="dropdown-item">Sporting Portugal</a>
+                <a href="" class="dropdown-item">FC Porto</a>
+                <a href="" class="dropdown-item">SL Benfica</a>
             </div>
         </li>
 
@@ -50,13 +50,13 @@
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                Special Offers
+                Spain
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="" class="dropdown-item">Barcelona</a>
+                <a href="" class="dropdown-item">Real Madrid</a>
+                <a href="" class="dropdown-item">Atletico</a>
+                <a href="" class="dropdown-item">Real Sociedad</a>
             </div>
         </li>
     </ul>
