--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -7,8 +7,9 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="" class="dropdown-item">By Price</a>
+                <a href="" class="dropdown-item">By Year</a>
+                <a href="" class="dropdown-item">By Size</a>
                 
-                <a href="" class="dropdown-item ">By Country</a>
                 <a href="" class="dropdown-item">All Products</a>
             </div>
         </li>
