--- a/static/css/base.css
+++ b/static/css/base.css
@@ -116,6 +116,15 @@ footer {
     margin-bottom: 10px;
 }
 
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    
+}
 
 /* -------------------------------- Media Queries */
 
