--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %} 
-{% load static %} 
+{% extends "base.html" %}
+{% load static %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -7,10 +7,12 @@
         <div class="col"></div>
     </div>
 </div>
-{% endblock %} 
+{% endblock %}
 
 {% block content %}
+
 <div class="overlay"></div>
+
 
 <div class="container-fluid">
     <div class="row">
@@ -27,11 +29,11 @@
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card h-100 border-0">
                         {% if product.image %}
-                        <a href="">
+                        <a href="{% url 'product_detail' product.id %}">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
                         {% else %}
-                        <a href="">
+                        <a href="{% url 'product_detail' product.id %}">
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
                                 alt="{{ product.name }}">
                         </a>
@@ -48,34 +50,32 @@
                         </div>
                     </div>
                 </div>
+                {% if forloop.counter|divisibleby:1 %}
+                <div class="col-12 d-sm-none mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:2 %}
+                <div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:3 %}
+                <div class="col-12 d-none d-lg-block d-xl-none mb-5">
+                    <hr>
+                </div>
+                {% endif %}
+                {% if forloop.counter|divisibleby:4 %}
+                <div class="col-12 d-none d-xl-block mb-5">
+                    <hr>
+                </div>
+                {% endif %}
                 {% endfor %}
             </div>
         </div>
     </div>
 </div>
-{% if forloop.counter|divisibleby:1 %}
-<div class="col-12 d-sm-none mb-5">
-    <hr>
-</div>
-{% endif %}
-{% if forloop.counter|divisibleby:2 %}
-<div class="col-12 d-none d-sm-block d-md-block d-lg-none mb-5">
-    <hr>
-</div>
-{% endif %}
-{% if forloop.counter|divisibleby:3 %}
-<div class="col-12 d-none d-lg-block d-xl-none mb-5">
-    <hr>
-</div>
-{% endif %}
-{% if forloop.counter|divisibleby:4 %}
-<div class="col-12 d-none d-xl-block mb-5">
-    <hr>
-</div>
-{% endif %}
-{% endfor %}
-</div>
-</div>
-</div>
-</div>
+
+
+</html>
 {% endblock %}
