--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
 
     <title>Your Skin {% block extra_title %}{% endblock %}</title>
 </head>
-<header class="container-fluid fixed-top">
+<header class="container-fluid fixed-top" style="background-color: white;">
     <div class="row">
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left d-none d-lg-block">
             <a href="{% url 'home' %}" class="nav-link main-logo-link">
@@ -147,10 +147,7 @@
 </body>
 <footer class="sticky-footer">
     <div class="container my-auto">
-        
-            
-        
-    </div>
+        </div>
     <ul class="nav justify-content-center">
         <li class="nav-item">
             <a class="nav-link footerLink" aria-current="page" href=""><strong>About Us</strong></a>
