--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
             </a>
         </div>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-none d-lg-block">
-            <form method="GET" action="">
+            <form method="GET" action="{% url 'products' %}">
                 <div class="input-group w-100">
                     <input class="form-control border border-black rounded-0" type="text" name="q"
                         placeholder="Search our site">
@@ -67,8 +67,19 @@
                 </div>
             </form>
         </div>
+        
+       
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-none d-lg-block">
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                <li class="list-inline-item">
+                    <a class="text-black nav-link" href="#">
+                        <div class="text-center">
+                            <div><i class="fas fa-gift fa-lg"></i></div>
+                            <p class="my-0">Mystery Box</p>
+                        </div>
+                    </a>
+                    
+                </li>
                 <li class="list-inline-item dropdown">
                     <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
