added img to media file

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -22,7 +22,7 @@
                 England
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="England-link">
-                <a href="{% url 'products' %}?category=Manchester_United" class="dropdown-item">Manchester United</a>
+                <a href="{% url 'products' %}?category=Manchester United" class="dropdown-item">Manchester United</a>
                 <a href="{% url 'products' %}?category=Arsenal" class="dropdown-item">Arsenal</a>
                 <a href="{% url 'products' %}?category=Manchester City" class="dropdown-item">Manchester City</a>
                 <a href="{% url 'products' %}?category=Liverpool" class="dropdown-item">Liverpool</a>
