--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,12 +1,30 @@
-{% extends "base.html" %} {% load static %} {% block page_header %}
-<div class="container header-container">
-  <div class="row">
-    <div class="col"></div>
-  </div>
-</div>
-{% endblock %} {% block content %}
-<div class="container text-center mt-5">
-    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
-</div>
-</body>
+
+{% extends "base.html" %}
+
+{% load static %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+   
+{% endblock %}
+
+{% block body %}
+    <body class="home-background">
+        {% block page_header %}
+            <div class="container header-container">
+                <div class="row">
+                    <div class="col"></div>
+                </div>
+            </div>
+        {% endblock %}
+
+        {% block content %}
+            <div class="container text-center mt-5">
+                <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+            </div>
+
+            
+            
+        {% endblock %}
+    </body>
 {% endblock %}
