--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@ html {
     height: 100%;
 }
 
-body {
+.home-background {
     background: url('/media/hero_image.webp') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
@@ -130,16 +130,44 @@ footer {
     margin-bottom: 10px;
 }
 
-
-
-/* -------------------------------- Media Queries */
-
-/* Slightly larger container on xl screens */
-@media (min-width: 1200px) {
-    .container {
-        max-width: 80%;
+.form-signin {
+    max-width: 330px;
+    padding: 1rem;
+  }
+  
+  .form-signin .form-floating:focus-within {
+    z-index: 2;
+  }
+  
+  .form-signin input[type="email"] {
+    margin-bottom: -1px;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+  
+  .form-signin input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
+  
+  .bg-image-vertical {
+    background: url('/media/hero_image.webp');
+    position: relative;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-position: right center;
+    background-size: auto 100%;
     }
-}
+    
+    @media (min-width: 1025px) {
+    .h-custom-2 {
+    height: 100%;
+    }
+    }
+    
+    
+  
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
