--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -21,7 +21,7 @@
         <div class="col-md-4">
             <div class="card">
                 <div class="card-body">
-                    <h2 class="card-title text-center logo-font">Sign In</h2>
+                    <h2 class="card-title text-center logo-font">Register</h2>
                     <hr class="w-50 mb-4">
 
                     <!-- Sign In Form -->
