--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -40,8 +40,8 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="Portugal-link">
                 <a href="{% url 'products' %}?category=Sporting Portugal" class="dropdown-item">Sporting Portugal</a>
-                <a href="" class="dropdown-item">FC Porto</a>
-                <a href="" class="dropdown-item">SL Benfica</a>
+                <a href="{% url 'products' %}?category=FC Porto" class="dropdown-item">FC Porto</a>
+                <a href="{% url 'products' %}?category=Benfica" class="dropdown-item">SL Benfica</a>
             </div>
         </li>
 
@@ -54,10 +54,10 @@
                 Spain
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="Spain-link">
-                <a href="" class="dropdown-item">Barcelona</a>
-                <a href="" class="dropdown-item">Real Madrid</a>
-                <a href="" class="dropdown-item">Atletico</a>
-                <a href="" class="dropdown-item">Real Sociedad</a>
+                <a href="{% url 'products' %}?category=Barcelona" class="dropdown-item">Barcelona</a>
+                <a href="{% url 'products' %}?category=Real Madrid" class="dropdown-item">Real Madrid</a>
+                <a href="{% url 'products' %}?category=Atletico de Madrid" class="dropdown-item">Atletico</a>
+                <a href="{% url 'products' %}?category=Real Sociedad" class="dropdown-item">Real Sociedad</a>
             </div>
         </li>
     </ul>
