--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load bag_tools %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -49,7 +50,7 @@
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
                                     <td class="py-3 w-25">
-                                        <form class="form update-form" method="POST" action="">
+                                        <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                             {% csrf_token %}
                                             <div class="form-group">
                                                 <div class="input-group">
@@ -81,13 +82,13 @@
                                             <small class="text-black">Update</small>
                                         </a>
                                         
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}">
+                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}">
                                             <small class="text-red">Remove</small>
                                         </a>
                                         
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">${{ item.product.price }}</p>
+                                        <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
                                     </td>
                                 </tr>
                             {% endfor %}
@@ -144,16 +145,15 @@
 
     // Remove item and reload on click
     $('.remove-item').click(function(e) {
-        var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
-        
-        var url = `/bag/remove/${itemId}`;
-        
-
-        $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
-    })
+            var csrfToken = "{{ csrf_token }}";
+            var itemId = $(this).attr('id').split('remove_')[1];
+            
+            var url = `/bag/remove/${itemId}/`;
+            
+            $.post(url, {'csrfmiddlewaretoken': csrfToken})
+             .done(function() {
+                 location.reload();
+             });
+        })
 </script>
 {% endblock %}
