--- a/static/css/base.css
+++ b/static/css/base.css
@@ -98,7 +98,7 @@ footer {
 .sticky-footer {
         
     position: absolute;
-    bottom: 0;
+    margin-top: auto;
     width: 100%;
     display: flex;
     flex-direction: column;
