--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -109,7 +109,7 @@
                                         </span>
                                         <span class="text-uppercase">Keep Shopping</span>
                                     </a>
-                                    <a href="" class="btn btn-black rounded-0 btn-lg">
+                                    <a href="" class="btn btn-black rounded-0 btn-lg secure-checkout-btn">
                                         <span class="text-uppercase">Secure Checkout</span>
                                         <span class="icon">
                                             <i class="fas fa-lock"></i>
