django version downgraded in order to fix error

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -72,7 +72,7 @@ footer {
 }
 
 .shop-now-button:hover {
-    background-color: #dc3545; 
+    background-color: #007bff; 
     color: #ffffff; 
     
 }
