--- a/templates/base.html
+++ b/templates/base.html
@@ -161,7 +161,7 @@
             <a class="nav-link footerLink" href="https://www.instagram.com" target="_blank"><strong>Instagram</strong></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link footerLink text-danger" href="{% url 'view_bag' %}"><strong>My Order</strong></a>
+            <a class="nav-link footerLink text-primary" href="{% url 'view_bag' %}"><strong>My Order</strong></a>
         </li>
     </ul>
     <div class="container my-auto">
