--- a/templates/base.html
+++ b/templates/base.html
@@ -83,6 +83,23 @@
                             </div>
                         </a>
                     </li>
+
+
+                    {% if request.user.is_authenticated %}
+        <li class="list-inline-item">
+            <a class="text-black nav-link" href="{% url 'order_history' %}">
+                <div class="text-center">
+                    <div><i class="fas fa-history fa-lg"></i></div>
+                    <p class="my-0">order History</p>
+                </div>
+            </a>
+        </li>
+       
+        {% endif %}
+
+
+
+
                     <li class="list-inline-item dropdown">
                         <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
@@ -106,7 +123,7 @@
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-danger font-weight-bold{% else %}text-primaryk{% endif %} nav-link"
+                        <a class="{% if grand_total %}text-pri font-weight-bold{% else %}text-primaryk{% endif %} nav-link"
                             href="{% url 'view_bag' %}">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
