--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
     <title>Your Skin {% block extra_title %}{% endblock %}</title>
 </head>
 
-<body>
+<body class="">
 
     <header class="container-fluid fixed-top" style="background-color: white;">
         <div class="row">
@@ -76,10 +76,10 @@
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-none d-lg-block">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item">
-                        <a class="text-black nav-link" href="#">
+                        <a class="text-black nav-link" href="">
                             <div class="text-center">
                                 <div><i class="fas fa-gift fa-lg"></i></div>
-                                <p class="my-0">Mystery Box</p>
+                                <p class="my-0">Blog</p>
                             </div>
                         </a>
                     </li>
