--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block body %}
-    <body class="home-background">
+    <body>
         {% block page_header %}
             <div class="container header-container">
                 <div class="row">
