--- a/products/templates/products/order_history.html
+++ b/products/templates/products/order_history.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% load bag_tools %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +9,14 @@
     <title>Document</title>
 </head>
 <body>
+    <tr>
+        <td colspan="5" class="text-right">
+            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Keep Shopping</span>
+            </a>
     <a href="{% url 'order_history' %}">
         <button type="button">View Order History</button>
     </a>
