--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,8 +2,8 @@ html {
     height: 100%;
 }
 
-.home-background {
-    background: url('/media/hero_image.webp') no-repeat center center fixed;
+body {
+    background: url('/media/sociedad.webp') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
