--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,10 +3,12 @@ html {
 }
 
 body {
-    background: url('/media/sociedad.webp') no-repeat center center fixed;
-    background-size: cover;
-    height: calc(100vh - 164px);
-    color: #555;
+    background: url('/media/hero_image.webp') no-repeat center center fixed;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    background-size: contain;
     
 }
 body,
@@ -97,14 +99,12 @@ footer {
 
 .sticky-footer {
         
-    position: absolute;
+    flex-shrink: 0;
+    padding: 1rem 0;
     margin-top: auto;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 100vw;
     color: black;
-    padding: 1rem 0;            
+    background-color: #f8f9fa;           
             
     
 }
@@ -134,7 +134,15 @@ footer {
     cursor: pointer;
 }
 
-
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
 
 
 
