--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,2 +1,22 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Document{% endblock %}</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">  <!-- Adjust the path here -->
+    {% block extra_css %}{% endblock %}
+</head>
+
+<body>
+
+    <div class="overlay"></div>
+
+    {% block content %}{% endblock %}
+
+</body>
+
+</html>
 
