added webhook handler

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -24,7 +24,7 @@
     }
 
     .shop-now-button {
-      background-color: #dc3545;
+      background-color: #000000;
       color: #ffffff;
       border: none;
       text-decoration: none;
@@ -35,7 +35,7 @@
     }
 
     .shop-now-button:hover {
-      background-color: #ff0000;
+      background-color: #007bff;
     }
   </style>
 </head>
