--- a/templates/errors/405.html
+++ b/templates/errors/405.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>404 Not Found</title>
+  <title>405 Not Found</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Grape+Nuts&display=swap">
   <style>
     body {
@@ -24,7 +24,7 @@
     }
 
     .shop-now-button {
-      background-color: #dc3545;
+      background-color: black;
       color: #ffffff;
       border: none;
       text-decoration: none;
@@ -35,7 +35,7 @@
     }
 
     .shop-now-button:hover {
-      background-color: #ff0000;
+      background-color: #007bff;
     }
   </style>
 </head>
