--- a/static/css/base.css
+++ b/static/css/base.css
@@ -95,6 +95,21 @@ footer {
     border: 1px solid black !important;
 }
 
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 
 
 .sticky-footer {
