--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,22 +1,25 @@
-{% extends "account/base.html" %}
+
+
 {% load i18n %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
-<div class="container text-center mt-5">
-    <h1 style="font-size: 24px;">{% trans "Sign In" %}</h1>
+{% block inner_content %}
+<hr>
+<h2 class="logo-font mb-4">{% trans "Sign Up" %}</h2>
+<hr>
 
-    <p style="font-size: 16px;">{% blocktrans %}If you don't have an account yet, please <a href="{{ signup_url }}" style="color: #007bff; text-decoration: underline;">sign up</a> first.{% endblocktrans %}</p>
+<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-    <form class="login" method="post" action="{% url 'account_login' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {% if redirect_field_value %}
-        <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
-        <button type="submit" class="btn btn-primary" style="font-size: 18px;">{% trans "Sign In" %} &raquo;</button>
-    </form>
-</div>
+<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+  {% csrf_token %}
+  {{ form|crispy }}
+  {% if redirect_field_value %}
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% endif %}
+  <a class="btn btn-outline-black rounded-0" href="{% url 'account_login' %}">Back to Login</a>
+  <button type="submit">{% trans "Sign Up" %}</button>
+</form>
+
 {% endblock %}
 
